tests/expected_output/use_of_undeclared_identifier/000000-clang-14.0-x86_64-pc-linux-gnu.txt
use_of_undeclared_identifier.c:2:12: error: use of undeclared identifier 'x'
    return x;
           ^
dcc explanation:  you have used the name 'x' on line 2 of use_of_undeclared_identifier.c without previously declaring it.
If you meant to use 'x' as a variable, check you have declared it by specifying its type
Also  check you have spelled 'x' correctly everywhere.
